--- a/sudarshana-web/app/style.css
+++ b/sudarshana-web/app/style.css
@@ -6,7 +6,7 @@ body{
 
 #results{
     width: 900px;
-    margin: auto;
+    margin-left:50px;
 }
 
 .card-header {
@@ -43,16 +43,26 @@ code:before{
     height: 50px;
     background-image: linear-gradient(-70deg, #8A2387 0% ,#E94057 100%);
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
 #searchbar > input {
+    color: white;
+    font-weight: 900;
+
     border: 0px;
-    height: 30px;
-    width: 300px;
+    height: 40px;
+    margin-left: 50px;
+    width: 500px;
     padding: 10px;
     border-radius: 5px;
+    background-image: linear-gradient(-20deg, rgba(233, 64, 87,0.5) 0% ,rgba(233, 64, 87,0.8) 100%);
+}
+
+#searchbar > input:focus {
+    outline-color: transparent;
+    outline-style: none;
 }
 
 
